--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
             <div class="hbtn" onclick="load(1);">2</div>
             <div class="hbtn" onclick="load(2);">3</div>
             <hr>
+            <div class="hbtn" onclick="DownloadF();">⭳</div>
+            <hr>
             <a class="hbtn" href="help.html" target="_blank">?</a>
         </div>
         <div class="content">
